--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,11 @@
 <IfModule mod_rewrite.c>
     RewriteEngine On
     RewriteBase /
+	
+	#Så inte folks bokmärken och annat är fail
+	RewriteRule    ^login\.php$  http://eldsjal.org/main  [R,L]
+	RewriteRule    ^main\.php$  http://eldsjal.org/main  [R,L]
+	RewriteRule    ^index2\.php$  http://eldsjal.org/main  [R,L]
 
     #Removes access to the system folder by users.
     #Additionally this will allow you to create a System.php controller,
