--- a/.htaccess
+++ b/.htaccess
@@ -21,3 +21,19 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)$ index.php?/$1 [QSA,L]
 </IfModule>
+
+<IfModule mod_expires.c>
+	ExpiresActive On
+	# ExpiresDefault A600
+	ExpiresByType image/x-icon "access plus 1 year"
+	ExpiresByType application/x-javascript "access plus 1 year"
+	ExpiresByType text/css "access plus 1 year"
+	ExpiresByType image/gif "access plus 1 year"
+	ExpiresByType image/png "access plus 1 year"
+	ExpiresByType image/jpeg "access plus 1 year"
+	ExpiresByType text/plain "access plus 1 year"
+	ExpiresByType application/x-shockwave-flash "access plus 1 year"
+	ExpiresByType video/x-flv "access plus 1 year"
+	ExpiresByType application/pdf "access plus 1 year"
+	# ExpiresByType text/html A600
+</IfModule>
